# Project_kursovaya

./: README.md  pyproject.toml
tests/: test_functions.py
utils/: functions.py  main.py
