[tool.poetry]
name = "project-kyrsovaya"
version = "0.1.0"
description = ""
authors = ["Maria <maria.mandrykina@gmail.com>"]
readme = "README.md"
packages = [{include = "project_kyrsovaya"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
